<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="app_name">Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="title_editHillfort">Edit Hillfort</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="hint_EnterAllFields">Please Fill In All Above Fields!</string>
    <string name="button_saveHillfort">Save Hillfort</string>
    <string name="button_addImageFromGallery"> Gallery </string>
    <string name="button_addAnotherImage"> Add Another Image </string>
    <string name="select_hillfortImage">Select Hillfort Image</string>
    <string name="change_hillfortFirstImage">Change First Hillfort Image</string>
    <string name="change_hillfortSecondImage">Change Second Hillfort Image</string>
    <string name="change_hillfortThirdImage">Change Third Hillfort Image</string>
    <string name="change_hillfortFourthImage">Change Fourth Hillfort Image</string>
    <string name="button_setLocation">Set Location</string>
    <string name="button_changeLocation">Change Location</string>
    <string name="title_activityMaps">Map</string>
    <string name="title_HillfortList">Hillfort List</string>
    <string name="title_HillfortAdd">Add Hillfort</string>
    <string name="title_allHillfortMaps">All Hillforts</string>
    <string name="title_favHillfort">Favourite Hillforts</string>
    <string name="toast_InvalidCreds">Incorrect Email or Password!</string>
    <string name="name">Name</string>
    <string name="promptSignUp">Not Signed Up Yet? Sign Up Below</string>
    <string name="logoutPrompt">Are you sure you would like to log out?</string>
    <string name="title_splashscreen">Splashscreen</string>
    <string name="title_HillfortLogin">Hillfort Login</string>
    <string name="infoTag">Information</string>
    <string name="imageTag">Images (Up To 4)</string>
    <string name="mapTag">Location</string>
    <string name="addressTag">Address</string>
    <string name="button_deleteHillfort">Delete Hillfort</string>
    <string name="deletePrompt">Are you sure you want to delete this Hillfort?</string>
    <string name="registerTitle">Register</string>
    <string name="title_Register">Hillfort User Register</string>
    <string name="hint_SucessfullRegister">Registration Sucessfull!</string>
    <string name="err_UserExists">User with the entered email already exists!</string>
    <string name="hint_hillfortadditionalNotes">Additional Notes</string>
    <string name="visitedTag">Visited</string>
    <string name="radio_Visited">Visited</string>
    <string name="date_Visited">Date Visited: (Not Visited Yet)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settingsTitle">Settings</string>
    <string name="allmapsTitle">All Hillforts</string>
    <string name="logoutTitle">Logout</string>
    <string name="changeUserTitle">Change Credentials</string>
    <string name="changeUserName">Name</string>
    <string name="button_SaveEditUser">Save</string>
    <string name="changeUserEmail">Email</string>
    <string name="changePassword">Password</string>
    <string name="hillfortCountNA">Hillfort Count: N/A</string>
    <string name="hillfortVisitedCount">Hillforts Visited: N/A</string>
    <string name="confirmUserEditSave">Are you sure you want to edit your credentials?</string>
    <string name="title_Settings">Settings</string>
    <string name="unsavedPrompt">Are you sure you dont want to save this Hillfort?</string>
    <string name="isVisited">Visited</string>
    <string name="notVisited">Not Visited</string>
    <string name="button_addImageFromCamera">Camera</string>
    <string name="changePasswordConfirm">Confirm New Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="hillfortStatsTitle">Stats</string>
    <string name="noUser">No User</string>
    <string name="hint_HillfortAlreadyExists">"Hillfort Already Exists!"</string>
    <string name="hillfortRating">Hillfort Rating</string>
    <string name="hint_PleaseRateHillfort">Please Rate The Hillfort!</string>
    <string name="fImage">firstImage</string>
    <string name="no_address_set">No Address Set</string>
    <string name="fourthImage">fourthImage</string>
    <string name="thirdImage">thirdImage</string>
    <string name="secondImage">secondImage</string>
    <string name="favHillforts">Favourites</string>
    <string name="toast_AuthFail">Authentication Failed</string>
    <string name="text_favorites">Favourites</string>
    <string name="button_shareHillfort">SHARE HILLFORT</string>
</resources>